# ianalyzer-readers

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python-package.yml
docs/: api.md  examples.md  index.md  usage.md
ianalyzer_extractors/extractors/: extract.py
ianalyzer_extractors/readers/: core.py  xml.py
ianalyzer_readers/: extract.py  utils.py  xml_tag.py
ianalyzer_readers/readers/: core.py  csv.py  html.py  json.py  rdf.py  turtle.py  xlsx.py  xml.py
src/: core.py  csv.py  html.py  xml.py
src/readers/: core.py  csv.py  html.py  xml.py
src/tests/: mock_csv_corpus.py
tests/: html_reader.py  mock_csv_corpus.py  rdf_reader.py  test_csvcorpus.py  test_generic_extractors.py  test_json_reader.py  test_rdf_reader.py  ttl_reader.py  xlsx_reader.py  xml_reader.py
tests/csv/: test_csv_reader.py
tests/csv/data/: Hamlet.csv  Macbeth.csv  Much Ado About Nothing.csv
tests/csv_example/: example.csv
tests/html_example/: hamlet.html
tests/json/: json_reader.py
tests/json/data/: Macbeth.json
tests/rdf/: rdf_reader.py  test_rdf_reader.py
tests/rdf/data/: hamlet.ttl
tests/ttl_example/: euparl_extract.ttl  hamlet.ttl  opacity.ttl
tests/xlsx_example/: hamlet.xlsx
tests/xml/: test_xml_extraction.py  test_xml_reader.py
tests/xml/data/: hamlet.xml
